--- a/jxf/src/main/resources/messages_en_US.properties
+++ b/jxf/src/main/resources/messages_en_US.properties
@@ -1,6 +1,7 @@
 label.transaction=Transaction
 label.stock=Stock
 label.print=Print
+label.memo=Memo
 
 label.transactiontype=Transaction Type
 label.transactionin=Stock In
@@ -321,6 +322,7 @@ operate.save=Save
 operate.cancel=Cancel
 operate.reset=Reset
 operate.submit=Submit
+operate.selectthis=OK
 
 # Page Title
 title.index=Home
