--- a/jxf/src/main/resources/messages_zh_CN.properties
+++ b/jxf/src/main/resources/messages_zh_CN.properties
@@ -1,6 +1,7 @@
 label.transaction=交易
 label.stock=库存
 label.print=打印
+label.memo=记事本
 
 label.transactiontype=交易类型
 label.transactionin=入库
@@ -18,13 +19,13 @@ label.notpaid=未支付
 label.savepaid=保存为已支付
 label.saveunpaid=保存为未支付
 
-label.materialmaintain=普通物料维护
-label.material=物料
-label.additionalmaterial=辅料
-label.materialtype=物料类型
-label.materialgroup=组合物料
-label.materialid=物料编号
-label.parentid=父物料编号
+label.materialmaintain=基础资料录入
+label.material=铝材
+label.additionalmaterial=配件
+label.materialtype=铝材类型
+label.materialgroup=组合铝材
+label.materialid=铝材编号
+label.parentid=父铝材编号
 label.pinming=品名
 label.thickness=厚度
 label.thicknessunit=厚度单位
@@ -36,11 +37,11 @@ label.lengthunit=长度单位
 label.count=总支量
 label.totalweight=总重量
 label.riskcount=预警支数
-label.materialrisk=物料库存预警
+label.materialrisk=铝材库存预警
 label.calweight=理论重量
 label.actweight=实际重量
 label.calincome=理论收入
-label.checkstock=匹配物料
+label.checkstock=匹配铝材
 label.orderreport=销售单查询统计
 
 label.creationdate=创建日期
@@ -66,7 +67,7 @@ label.title=职位
 label.usertype=用户类型
 
 
-validation.materialexist.invalid=物料已存在
+validation.materialexist.invalid=铝材信息已存在
 message.success=成功!
 
 
@@ -323,6 +324,7 @@ operate.go=开始
 operate.ok=好的
 operate.reset=重置
 operate.submit=提交
+operate.selectthis=确定
 
 title.index=首页
 title.phone.list=智能手机管理
