--- a/jxf/src/main/resources/messages_zh_CN.properties
+++ b/jxf/src/main/resources/messages_zh_CN.properties
@@ -19,7 +19,7 @@ label.notpaid=未支付
 label.savepaid=保存为已支付
 label.saveunpaid=保存为未支付
 
-label.materialmaintain=基础资料录入
+label.materialmaintain=基础资料录入(库存)
 label.material=铝材
 label.additionalmaterial=配件
 label.materialtype=铝材类型
