--- a/jxf/src/main/resources/messages_zh_CN.properties
+++ b/jxf/src/main/resources/messages_zh_CN.properties
@@ -2,6 +2,8 @@ label.transaction=交易
 label.stock=库存
 label.print=打印
 label.memo=记事本
+label.memotitle=标题
+label.companyinfo=公司信息
 
 label.transactiontype=交易类型
 label.transactionin=入库
@@ -66,7 +68,7 @@ label.location=地点
 label.title=职位
 label.usertype=用户类型
 
-
+validation.invaidorder=无效订单
 validation.materialexist.invalid=铝材信息已存在
 message.success=成功!
 
@@ -333,6 +335,8 @@ title.pc.list=电脑管理
 title.admin.option.list=选项管理
 title.admin.user.list=用户管理
 
+validation.user.deleteself=不能删除自己
+validation.user.notadmin=你不是管理员
 validation.user.invalid=用户名或密码或验证码无效
 validation.verificationcode.invalid=验证码无效
 validation.not.empty=不能为空
