--- a/jxf/src/main/resources/messages_en_US.properties
+++ b/jxf/src/main/resources/messages_en_US.properties
@@ -2,6 +2,8 @@ label.transaction=Transaction
 label.stock=Stock
 label.print=Print
 label.memo=Memo
+label.memotitle=Memo Title
+label.companyinfo=Company Info
 
 label.transactiontype=Transaction Type
 label.transactionin=Stock In
@@ -65,7 +67,7 @@ label.location=Location
 label.title=Title
 label.usertype=User Type
 
-
+validation.invaidorder=Invalid Order
 validation.materialexist.invalid=Material exists
 message.success=Succeed!
 
@@ -336,6 +338,8 @@ title.admin.option.list=Option Values
 msg.delete.confirm=Are you sure you want to delete this item?
 
 # Validation
+validation.user.deleteself=You can not delete yourself
+validation.user.notadmin=You are not administrator
 validation.user.invalid=Invalid username or password
 validation.verificationcode.invalid=Invalid verification code
 validation.not.empty=can not be empty
